src/test/ui/issues/issue-22312.stderr
error[E0605]: non-primitive cast: `Self` as `&dyn Index<usize, Output = <Self as Index<usize>>::Output>`
  --> $DIR/issue-22312.rs:11:24
   |
LL |         let indexer = &(*self as &dyn Index<usize, Output = <Self as Index<usize>>::Output>);
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ invalid cast
   |
help: borrow the value for the cast to be valid
   |
LL |         let indexer = &(&*self as &dyn Index<usize, Output = <Self as Index<usize>>::Output>);
   |                         ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0605`.
